--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=bff-cSmartCity
+feign.client.config.default.connect-timeout=5000
+feign.client.config.default.read-timeout=5000
